# simul8

./: .gitignore  Cargo.toml
.github/workflows/: cicd.yml
pkg/: index.html
src/: lib.rs  main.rs  util.rs
src/app/: mod.rs
src/sim/: constraints.rs  event.rs  mod.rs  rendering.rs
